# django-clean-architecture-approach

./: .gitignore  README.md  Taskfile.yml  docker-compose.yaml  prometheus.yml
book-app/: .env  (+3 more)
food-app/: .gitignore  Dockerfile  Taskfile.yml  db.sqlite3  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
food-app/__tests__/: test_create_product.py
food-app/api/: factories.py  serializers.py  views.py
food-app/application/: interactors.py  use_cases.py  views.py
food-app/application/__tests__/: test_use_cases.py
food-app/django_app/: admin.py  factories.py  models.py  repositories.py  views.py
food-app/docs/: context.puml
food-app/domain/: entities.py  errors.py  repositories.py  validators.py
food-app/domain/__tests__/: test_entities.py
food-app/food/: admin.py  models.py
food-app/food/migrations/: 0001_initial.py
food-app/product/application/__tests__/: test_use_cases.py
food-app/product/domain/: errors.py
food-app/setup/: asgi.py  settings.py  urls.py  wsgi.py
product/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
product/__tests__/: test_create_product.py
product/django_app/: factories.py  models.py  views.py
product/product/application/: commands.py  dtos.py  ports.py  use_cases.py  views.py
product/product/application/__tests__/: test_use_cases.py  test_views.py
product/product/domain/: entities.py  errors.py  events.py  repositories.py  validators.py
product/product/domain/__tests__/: test_entities.py  test_validators.py
product/product/infra/: event_publisher.py  repositories.py
product/proto/: product.proto  product_pb2.py  product_pb2_grpc.py  serializers.py  services.py
product/setup/: asgi.py  settings.py  urls.py
supplier/: pyproject.toml
supplier/app/__seedwork/application/: use_cases.py
supplier/app/domain/: entities.py  repositories.py
supplier/app/infra/: models.py  repositories.py
supplier/app/usecases/: create_supplier_use_case.py
(+41 files in other folders)
