[tool.poetry]
name = "supplier"
version = "0.1.0"
description = ""
authors = ["Gustavo Valle"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
orjson = "^3.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
